tests/conformance/syntax/positive/frontend_valid_let.ditt
module Frontend.SurfaceValidLet where

postulate C : Cat
id (x : C) : C = let y : C = x in y
