tests/conformance/syntax/negative/let_in_missing_invalid.ditt
module Syntax.LetFormsBad where

postulate C : Cat
id (x : C) : C = let y = x y
